:lipstick: Using bootstrap alert class to display messages

--- a/Store/Store/ClientApp/app/components/messages/messages.component.html
+++ b/Store/Store/ClientApp/app/components/messages/messages.component.html
@@ -1,10 +1,21 @@
 ﻿<div *ngIf="messageService.messages.length">
-
-    <h2>Messages</h2>
-    <button class="clear"
-            (click)="messageService.clear()">
-        clear
-    </button>
-    <div *ngFor='let message of messageService.messages'> {{message}} </div>
-
+    <div class="well">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h2>Messages</h2>
+            </div>
+        </div>
+        <ul>
+            <div *ngFor='let message of messageService.messages'>
+                <li class=" list-unstyled alert {{message.type}}">{{message.message}}</li>
+            </div>
+        </ul>
+        <div class="row Text-center">
+            <div class="col-md-12">
+                <button class="btn btn-warning" (click)="messageService.clear()">
+                    Clear
+                </button>
+            </div>
+        </div>
+    </div>
 </div>
