--- a/Store/Store/ClientApp/app/components/user/user.component.html
+++ b/Store/Store/ClientApp/app/components/user/user.component.html
@@ -201,7 +201,7 @@
                                     class=" btn btn-info" (click)="updateUserModal.hide()">
                                 Close
                             </button>
-                            <button type="submit" class=" btn btn-success" [disabled]="!userForm.form.valid">Update</button>
+                            <button type="submit" class=" btn btn-success" [disabled]="!userForm.form.valid">Change</button>
                         </div>
                     </div>
                 </div>
