--- a/Store/Store/ClientApp/app/components/order/order.component.html
+++ b/Store/Store/ClientApp/app/components/order/order.component.html
@@ -1,13 +1,15 @@
-﻿<div class="row">
+﻿
+<div class="row">
     <div class="col-md-12 text-left">
        <h2>Our Order</h2>
     </div>
 </div>
 
+   <app-messages></app-messages>
 
-<app-messages></app-messages>
+
+
 <!-- We use the async pipe to automatically subscribe/unsubscribe to our observable -->
-
 
 
 <div class="row control-box">
