--- a/Store/Store/ClientApp/app/components/user/user.component.html
+++ b/Store/Store/ClientApp/app/components/user/user.component.html
@@ -14,12 +14,13 @@
             <button type="button" class="btn btn-primary" (click)="addUserModal.show()">Add User</button>
         </div>
     </div>
-    <div class="col-md-8 col-sm-12 text-right">
+    </div>
+<div class="row control-box">
+    <div class="col-md-12 col-sm-12 text-right">
         <div class="form-group search-box">
-            <input type="text" class="form-control" id="userFilter.lastName" [(ngModel)]="userFilter.lastName" [value]="userFilter.firstName" placeholder="Search Users .." />
+            <input type="text" class="form-control" placeholder="Search Users .." />
         </div>
     </div>
-
 </div>
 <div *ngIf="users.length">
     <table class="table table-striped table-bordered table-hover">
@@ -32,7 +33,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let user of users |filterBy:userFilter| paginate: { itemsPerPage: 5, currentPage: p }; let i = index">
+            <tr *ngFor="let user of users | paginate: { itemsPerPage: 5, currentPage: page }; let i = index">
                 <td> {{ user.id }}</td>
                 <td> {{ user.firstName }} </td>
                 <td> {{ user.lastName }} </td>
@@ -44,7 +45,7 @@
                 </td>
             </tr>
         </tbody>
-        <pagination-controls (pageChange)="p = $event"></pagination-controls>
+        <pagination-controls (pageChange)="page = $event"></pagination-controls>
     </table>
 </div>
 {{diagnostic}}
