--- a/Store/Store/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/Store/Store/ClientApp/app/components/navmenu/navmenu.component.html
@@ -19,12 +19,12 @@
                 </li>
                 <li [routerLinkActive]="['link-active']">
                     <a [routerLink]="['/users']">
-                        <span class='glyphicon glyphicon-education'></span> Users
+                        <span class='glyphicon glyphicon-user'></span> Users
                     </a>
                 </li>
                 <li [routerLinkActive]="['link-active']">
                     <a [routerLink]="['/orders']">
-                        <span class='glyphicon glyphicon-th-list'></span> Orders
+                        <span class='glyphicon glyphicon-shopping-cart'></span> Orders
                     </a>
                 </li>
             </ul>
