--- a/Store/ClientApp/app/components/user/user.component.html
+++ b/Store/ClientApp/app/components/user/user.component.html
@@ -60,7 +60,7 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <form class="well" (ngSubmit)="addUserModal.hide(); addUser(model); addUserForm.reset()" #addUserForm="ngForm">
+            <form class="well" (ngSubmit)="addUser(model); addUserModal.hide();" #addUserForm="ngForm">
                 <div class="form-group">
                     <label class="required" for="firstName">First Name</label>
                     <input type="text" class="form-control" id="firstName" placeholder="User"
@@ -93,7 +93,7 @@
                                 class="btn btn-info" (click)="addUserModal.hide()">
                             Close
                         </button>
-                        <button type="submit" class=" btn btn-success" [disabled]="!userForm.form.valid">Submit</button>
+                        <button type="submit" class=" btn btn-success" [disabled]="!addUserForm.form.valid">Submit</button>
                     </div>
                 </div>
             </form>
@@ -171,7 +171,7 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <form class="well" (ngSubmit)="updateUserModal.hide(); updateUserForm.reset(); updateUser(model); " #updateUserForm="ngForm">
+            <form class="well" (ngSubmit)=" updateUser(model); updateUserModal.hide();" #updateUserForm="ngForm">
                 <div class="form-group">
                     <label class="required" for="firstName">First Name</label>
                     <input type="text" class="form-control" id="firstName" placeholder="User"
@@ -204,7 +204,7 @@
                                     class=" btn btn-info" (click)="updateUserModal.hide()">
                                 Close
                             </button>
-                            <button type="submit" class=" btn btn-success" [disabled]="!userForm.form.valid">Change</button>
+                            <button type="submit" class=" btn btn-success" [disabled]="!updateUserForm.form.valid">Change</button>
                         </div>
                     </div>
                 </div>
